--- a/css/style.css
+++ b/css/style.css
@@ -1,303 +1,315 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 
 /* ---------------- global css -----------------*/
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  overflow-x: hidden;
+  font-family: "Poppins", sans-serif;
+}
+.wrapper {
+  width: 100vw;
+}
+.container {
+  width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  min-height: 700px;
+  margin: auto;
+}
+.col-6 {
+  width: 50%;
+}
+.row {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.col-4 {
+  width: 29.33%;
+  padding: 15px;
+  margin: 15px;
 
-*{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
+  box-shadow: 3px -1px 18px -1px rgba(160, 160, 160, 0.62);
 }
-body{
-    overflow-x: hidden;
-    font-family: 'Poppins', sans-serif;
+.btn {
+  padding: 9px 15px;
+  border: none;
+  background-color: #e02c6d;
+  color: #ffffff;
 }
-.wrapper{
-    width: 100vw;
+.btn:hover {
+  background-color: #ce0a52;
 }
-.container{
-    width: 70%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-     align-items: center;
-    justify-content: center;
-    min-height: 700px;
-    margin: auto;
+.btn i {
+  margin-left: 5px;
 }
-.col-6{
-width: 50%;
+h2 {
+  line-height: 90px;
 }
-.row{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-.col-4{
-    width: 29.33%;
-    padding: 15px;
-    margin: 15px;
-    box-shadow: 3px -1px 18px -1px rgba(160,160,160,0.62);
-
-}
-.btn{
-    padding: 9px 15px;
-    border: none;
-     background-color: #E02C6D;
-    color: #ffffff;
-}
-.btn:hover{
- background-color: #ce0a52;
-}
-.btn i{
-    margin-left: 5px;
-}
-h2{
-line-height: 90px;
-}
-.left{
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
-}
-.right{
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
-
-}
-
-
-/* ----------------- header css ----------*/ 
-.header-wrapper{
-    background-color: #2D25A0;
-    margin-bottom: 60px;
+.right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.header-img{
-    width: 100%;
-}
-.header-img:hover.header-img img{
-transform: translate(0px,-20px);
-transition: all 0.4s  ease ;
-}
-img{
-    width: 100%;
-}
-.header-text{
-    padding: 30px 70px 30px 0px;
-}
-.header-text h2{
-font-size: 4rem;
-color: #ffffff;
-
-}
-.header-btn{
-    width: 100%;
-    display: flex;
-    justify-content: start;
+/* ----------------- header css ----------*/
+.header-wrapper {
+  background-color: #2d25a0;
+  margin-bottom: 60px;
 }
 
-
+.header-img {
+  width: 100%;
+}
+.header-img:hover.header-img img {
+  transform: translate(0px, -20px);
+  transform: rotate(100deg);
+  transition: all 0.5s ease;
+}
+img {
+  width: 100%;
+}
+.header-text {
+  padding: 30px 70px 30px 0px;
+}
+.header-text h2 {
+  font-size: 4rem;
+  color: #ffffff;
+}
+.header-btn {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+}
 
 /*-------  inner-section  ----------*/
-.inner-section{
-    margin-bottom: 60px;
+.inner-section {
+  margin-bottom: 60px;
+}
+.card-img:hover img {
+  transform: translate(0px, -5px);
+  transition: all 0.5s ease;
 }
 /* .inner-section .container{
     flex-direction: column;
 } */
 
-.card-text h5{
-    font-size: 25px;
-    margin: 10px 0px;
+.card-text h5 {
+  font-size: 25px;
+  margin: 10px 0px;
 }
-.card-text p{
-    color: #6C6C6C;
-    font-weight: 100;
+.card-text p {
+  color: #6c6c6c;
+  font-weight: 100;
 }
 
 /*--------- highlight ---------*/
 
-
-
-.highlight-wrapper .left{
-    align-items: flex-start;
+.highlight-wrapper .left {
+  align-items: flex-start;
+  padding-right: 30px;
 }
-.highlight-text h2{
-font-size: 45px;
-line-height: 60px;
-text-align: left;
-
+.highlight-text h2 {
+  font-size: 45px;
+  line-height: 60px;
+  text-align: left;
 }
 
-.highlight-text h2 span{
-    display: block;
+.highlight-text h2 span {
+  display: block;
 }
-.highlight-description{
-    padding: 15px 130px 30px 0px;
-
+.highlight-description {
+  padding: 15px 130px 30px 0px;
 }
-
 
 /*------------------ football section ------------*/
 
-.football{
-    margin-bottom:40px  ;
-
+.football {
+  margin-bottom: 40px;
 }
 
-.football .container{
-    min-height: auto;
+.football .container {
+  min-height: auto;
 }
-.football img{
-    width: 450px;
+.football img {
+  width: 450px;
 }
-
 
 /* ---------------------logo---------------  */
 
-.logo-section{
-    margin: 30px 0px;
+.logo-section {
+  margin: 30px 0px;
 }
 
-.logo i{
-    margin: 10px;
-    font-size: 20px;
-    color: #6C6C6C;
-   
-    
+.logo i {
+  margin: 10px;
+  font-size: 20px;
+  color: #6c6c6c;
+}
+
+/*--------------    happy-users-section css start   ---------------------*/
+.happy-users-section {
+  position: relative;
+  top: -12vh;
+  left: 0vw;
+  margin: 100px 0px;
+}
+.happy-users-section .row::before {
+  content: "";
+  height: 250px;
+  width: 250px;
+  background: rgb(255, 99, 71);
+  position: absolute;
+  left: -140px;
+  top: -30px;
+  border-radius: 50%;
+  z-index: -10;
+}
+.happy-users-section .row::after {
+  content: "";
+  height: 250px;
+  width: 250px;
+  background: #27b6ba;
+  position: absolute;
+  right: -130px;
+  bottom: -180px;
+  border-radius: 50%;
+}
+.happy-users-section .col-4 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 300px;
+  padding: 40px;
+  box-shadow: 1px 1px 9px 3px rgb(1 1 1 / 9%);
+}
+
+.happy-users-text {
+  color: #27b6ba;
 }
 
 /*--------------------- legal-section ----------------*/
-.legal-section .left{
-margin-right: 50px;
+.legal-section .left {
+  margin-right: 50px;
 }
-.legal-section{
-    margin-bottom: 60px;
+.legal-section {
+  margin-bottom: 60px;
+  background-color: lightyellow;
 }
-.legal-section span{
-margin-left: 5px;
-display: block;
+.legal-section span {
+  margin-left: 5px;
+  display: block;
 
-margin-top: 20px;
+  margin-top: 20px;
 }
-.legal-section span a{
-    /* text-decoration: none; */
-    color: #6C6C6C;
+.legal-section span a {
+  /* text-decoration: none; */
+  color: #6c6c6c;
 }
 /*---------------- footer -------------*/
 
-footer{
-    margin: 50px 0;
+footer {
+  margin: 50px 0;
 }
-
-
-
 
 /*--------------------------- responsive ---------------------*/
 
+@media (max-width: 1200px) {
+  /* ---------------- global css -----------------*/
 
-
-
-@media (max-width: 1200px) { 
-
-/* ---------------- global css -----------------*/
-
-.col-4{
+  .col-4 {
     width: 45%;
     padding: 15px;
     margin: 15px;
-    box-shadow: 3px -1px 18px -1px rgba(160,160,160,0.62);
+    box-shadow: 3px -1px 18px -1px rgba(160, 160, 160, 0.62);
+  }
 
-}
-
-
-
-
-/* ----------------- header css ----------*/ 
-.header-wrapper{
-    background-color: #2D25A0;
+  /* ----------------- header css ----------*/
+  .header-wrapper {
+    background-color: #2d25a0;
     margin-bottom: 60px;
-}
-.header-text{
+  }
+  .header-text {
     padding: 30px 40px 30px 0px;
-}
-.header-text h2{
-font-size: 2.7rem;
-line-height: 70px;
+  }
+  .header-text h2 {
+    font-size: 2.7rem;
+    line-height: 70px;
+  }
 
-}
-
-/*--------------------- legal notice---------------*/
-.legal-section{
+  /*--------------------- legal notice---------------*/
+  .legal-section {
     margin-bottom: 60px;
+    
+  }
+  .legal-section span {
+    margin-left: 70px;
+    display: block;
+  }
 }
-.legal-section span{
-margin-left: 70px;
-display: block;
-}
 
-
- } 
- 
-@media (max-width: 992px) { 
-
-
-.col-4{
-    width: 70%;
+@media (max-width: 992px) {
+  .col-4 {
+    width: 60%;
     padding: 15px;
     margin: 15px;
-    box-shadow: 3px -1px 18px -1px rgba(160,160,160,0.62);
-
-}
-.left{
+    box-shadow: 3px -1px 18px -1px rgba(160, 160, 160, 0.62);
+  }
+  .left {
     width: 100%;
     margin-bottom: 40px !important;
 
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
-margin-bottom: 20px;
-}
-.right{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 20px;
+  }
+  .right {
     width: 100%;
     margin-bottom: 40px !important;
-display: flex;
-align-items: center;
-justify-content: center;
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-
-
-/* ----------------- header css ----------*/ 
-.header-wrapper{
-    background-color: #2D25A0;
+  /* ----------------- header css ----------*/
+  .header-wrapper {
+    background-color: #2d25a0;
     margin-bottom: 60px;
-}
-.header-text{
+  }
+  .header-text {
     padding: 30px 40px 30px 0px;
-}
-.header-text h2{
-font-size: 2.7rem;
-line-height: 70px;
-
-}
-/*----------------football-----------------*/
-.football img{
+  }
+  .header-text h2 {
+    font-size: 2.7rem;
+    line-height: 70px;
+  }
+  /*----------------football-----------------*/
+  .football img {
     width: 200px;
-}
+  }
   /*--------------------- legal notice---------------*/
-.legal-section span{
-margin-left: 70px;
-display: block;
-}  
+  .legal-section span {
+    margin-left: 70px;
+    display: block;
+  }
 }
-
-
-
-
